Fix for search input field. Destroying design on mobile. Not correct responsive though. :))))

--- a/GrönaFastigheter/wwwroot/css/app.dev.css
+++ b/GrönaFastigheter/wwwroot/css/app.dev.css
@@ -250,10 +250,6 @@ h3, h4, h5, h6 {
 .estates-listing {
 }
 
-.search-container input {
-    width: 20em;
-}
-
 .search-container h2 {
     color: white;
     font-weight: 600;
